<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/Arec_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_priority"
        android:hint="@string/edit_hint"
        android:scrollHorizontally="true"
        android:scrollbars="vertical|horizontal" 
        android:windowSoftInputMode="stateHidden"/>

    <Button
        android:id="@+id/Save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Arec_edit"
        android:text="@string/Save" />

    <Button
        android:id="@+id/prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Arec_edit"
        android:layout_toRightOf="@+id/Save"
        android:text="@string/Prev" />

    <Button
        android:id="@+id/Discard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Arec_edit"
        android:layout_toRightOf="@+id/next"
        android:text="@string/Discard" />

    <RadioGroup
        android:id="@+id/radio_SOAP"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="A" />

        <RadioButton
            android:id="@+id/radio_S"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="S" />

        <RadioButton
            android:id="@+id/radio_PE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="O:PE" />

        <RadioButton
            android:id="@+id/radio_LAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="O:LAB" />

        <RadioButton
            android:id="@+id/radio_IMG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="O:IMG" />

        <RadioButton
            android:id="@+id/radio_OTHERS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="O:OTHERS" />

        <RadioButton
            android:id="@+id/radio_P"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="P" />

        <RadioButton
            android:id="@+id/radio_M"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PM" />

        <RadioButton
            android:id="@+id/radio_C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="C" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radio_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/radio_SOAP"
        android:layout_toRightOf="@+id/textView1"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_prio_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="0" />

        <RadioButton
            android:id="@+id/radio_prio_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="1" />

        <RadioButton
            android:id="@+id/radio_prio_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="2" />

        <RadioButton
            android:id="@+id/radio_prio_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="3" />

        <RadioButton
            android:id="@+id/radio_prio_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="4" />

        <RadioButton
            android:id="@+id/radio_prio_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="5" />

        <RadioButton
            android:id="@+id/radio_prio_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="6" />

        <RadioButton
            android:id="@+id/radio_prio_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="7" />

        <RadioButton
            android:id="@+id/radio_prio_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="8" />

        <RadioButton
            android:id="@+id/radio_prio_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="9" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/radio_priority"
        android:layout_alignParentLeft="true"
        android:text="Priority : " />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Discard"
        android:layout_alignBottom="@+id/Discard"
        android:layout_toRightOf="@+id/Delete"
        android:text="@string/Next" />

    <Button
        android:id="@+id/Delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Arec_edit"
        android:layout_toRightOf="@+id/prev"
        android:text="Delete" />

</RelativeLayout>